<resources>
    <string name="app_name">FinalStelAbrego</string>
    <string name="selfCare">Self Care</string>
    <string name="feeling">How Are You Feeling Right Now?</string>
    <string name="wgo">What\'s going on in your life?</string>
    <string name="mentalHealth">What can you do in the next hour to improve your mental health?</string>
    <string name="deepBreaths">Breathe</string>
    <string name="timer">5:00</string>
    <string name="save">save entry</string>
    <string name="pastEntries">Past Entries</string>
    <string name="lifeEvents">Life Events:</string>
    <string name="futurePlans">Future Plans:</string>
    <string name="breathing">Breathed for 5 Minutes?</string>
</resources>
