<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PastEntries"
    android:background="@color/background">
    <include
        layout="@layout/header"
        android:id="@+id/header"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/menu"
        app:layout_constraintTop_toBottomOf="@+id/header"
        tools:layout_editor_absoluteX="42dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <TextView
                android:id="@+id/pastEntriesTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pastEntries"
                android:textAlignment="center"
                android:textSize="30sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp" />
            <View

                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appName" />
            <LinearLayout
                android:id="@+id/entryDetails"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/smile2"
                    android:layout_width="100sp"
                    android:layout_height="100sp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/smile3" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lifeEvents"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/feelingsText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="50sp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/futurePlans"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/futureText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20sp"
                    android:layout_marginRight="20sp"
                    android:layout_marginBottom="50sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/breathing"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/breathingText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20sp"
                    android:layout_marginRight="20sp"
                    android:layout_marginBottom="50sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <include
        layout="@layout/menu"
        android:id="@+id/menu"/>
</android.support.constraint.ConstraintLayout>